@@ -3,7 +3,7 @@ AUX phidget21-java.patch 716 RMD160 7fd30e15aa9b89d7395c74cbf8b413f2aabff795 SHA
 AUX phidget21-libdir.patch 559 RMD160 133c0473c42003e00d90e2c60af5e94dd91d8b09 SHA1 fd5a67307f08a8ca1f9b751114d0bc3aff3daae5 SHA256 f17604ededb52a5dd1ef4e71c25d8ccb09bb5ecb15bee1b9c0cc38ce19e01072
 DIST Phidgetlinux_2.1.5.20090105.tar.gz 316490 RMD160 0c0088eee842b7b4b723867c08964557c665b9aa SHA1 484fa7c170e412e9513d5f08e883a5efd9a7c366 SHA256 bfaaaf2aa21c854b2f0305ed6b55605d336b6b890eedf40ead0e17b419b7ac33
 DIST Phidgetlinux_2.1.6.20090430.tar.gz 342985 RMD160 a45e335c4672e918152537cd771bcd4b21a85ddf SHA1 60fadd7ba15342b2ad6c58b19d659532fe963513 SHA256 b1cf06ecae292c2b201c30878fa2e89c2251d8a0b994a9227870a7ce52dc2605
-EBUILD phidget-2.1.5.20090105.ebuild 1466 RMD160 404226e7acfc5501f73fd0e71fbeb641aa080bcf SHA1 0637327cba23c81dccff3d1141f4d6b3f3737d3c SHA256 99cbe1caecc5f99920000adb77aacc558f6a3ec93e03910c9c662e72537a3e31
+EBUILD phidget-2.1.5.20090105.ebuild 1505 RMD160 fc29337e0c53566b47ef58cf0bb07a0f9b3514b3 SHA1 482a580774b068d4324b9eeae0cebe8fd1384510 SHA256 a672bd26ca4da0b97e03eaa59374e6470419be2eb2b70ed802d4a6a3ab711f83
 EBUILD phidget-2.1.6.20090430.ebuild 1505 RMD160 fc29337e0c53566b47ef58cf0bb07a0f9b3514b3 SHA1 482a580774b068d4324b9eeae0cebe8fd1384510 SHA256 a672bd26ca4da0b97e03eaa59374e6470419be2eb2b70ed802d4a6a3ab711f83
-MISC ChangeLog 2010 RMD160 54122ec6a26de1462ca76f67d47c85c2c94a4747 SHA1 6900303fa1ea3c1aff19951ab0fb3cbb932c88c9 SHA256 eb06142e3fc0178b472ddb989e5aa86d5f82ac370b6321384a892ad20e7724d7
+MISC ChangeLog 2161 RMD160 1f4cf59eb29457a0c757fac56825d8beeefc963c SHA1 acf477a1cd5b92b56af9962c697e5c5299362250 SHA256 271f7bbcc28c2df5ec72db9f1c1508bb696a03200ec8ad98629370934a05d475
 MISC metadata.xml 159 RMD160 f10ed331bd974e86e8c4596a8a52e300f40aec97 SHA1 84133adb2dda5a115dd082b76b119516e3154cef SHA256 8d195cad36f7f93232fa3b2523bd2f55d5ff84e843087433aa12cbb9af40e3ce
